FIX: admin ocfilter z-index

--- a/admin/view/stylesheet/stylesheet.css
+++ b/admin/view/stylesheet/stylesheet.css
@@ -694,3 +694,7 @@ input[type="radio"]:checked {
   left: 0;
 }
 
+
+.ocf-page {
+z-index: auto !important;
+}
